--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset';
+@import 'libs';
 @import 'global';
 
 .header{
@@ -106,7 +107,6 @@ footer{
                 fill: $accent;
             }
         }
-    
     }
     &__title{
         color: $title;
@@ -135,16 +135,12 @@ footer{
         }
     }
     &__form-btn{
+        @extend %btn;
         border: none;
-        background-color: $accent;
-        text-transform: uppercase;
-        color: #fff;
-        padding: 12px 26px;
-        box-shadow: 0px 7px 10px rgba(255,17,48,0.3);
         cursor: pointer;
+        letter-spacing: 1px;
     }
 }
-
 .footer-bottom{
     height: 75px;
     display: flex;
@@ -158,7 +154,78 @@ footer{
     }
 }
 
-
+.top-slider{
+    background-image: url('../images/top-slider-bg.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: $bg;
+    padding-top: 65px 0 45px;
+    &__container{
+        max-width: 1520px;
+    }
+    &__item{
+        display: flex !important;
+        justify-content: space-between;
+    }
+    &__content{
+        padding-left: 155px;
+        padding-top: 125px;
+    }
+    &__title{
+        max-width: 670px;
+        font-size: 58px;
+        line-height: 68px;
+        color: $title;
+        @extend %roboto-700;
+        margin-bottom: 35px;
+    }
+    &__text{
+        max-width: 470px;
+        margin-bottom: 55px;
+    }
+    &__link{
+        @extend %btn;
+        padding: 14px 35px;
+    }
+    .slick-dots{
+        display: flex;
+        justify-content: center;
+        margin-top: -70px;
+        li{
+            padding: 0 5px;
+            line-height: 0;
+            button{
+                padding: 0;
+                font-size: 0;
+                background-color: transparent;
+                width: 26px;
+                height: 26px;
+                border-radius: 50%;
+                border: 1px solid transparent;
+                position: relative;
+                &::before{
+                    content: '';
+                    position: absolute;
+                    width: 6px;
+                    height: 6px;
+                    border-radius: 50%;
+                    background-color: $default;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                }
+            }
+            &.slick-active{
+                button{
+                    border-color: $accent;
+                    &::before{
+                        background-color: $accent;
+                    }
+                }
+            }
+        }
+    }
+}
 
 
 @import 'media';
