--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -159,7 +159,7 @@ footer{
     background-repeat: no-repeat;
     background-size: cover;
     background-color: $bg;
-    padding-top: 65px 0 45px;
+    padding: 65px 0 45px;
     &__container{
         max-width: 1520px;
     }
@@ -282,7 +282,7 @@ footer{
         min-height: 635px;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(2, 1fr);
-        grid-gap: 30px;
+        gap: 30px;
     }
     &__item{
         background-repeat: no-repeat;
@@ -334,6 +334,48 @@ footer{
         color: $title;
         @extend %roboto-400;
         transition: all 0.3s ease 0s;
+    }
+}
+.video-fashion{
+    background-color: $bg;
+    background-image: url('../images/decor/pattern.svg');
+    background-repeat: no-repeat;
+    background-position: top center;
+    background-size: cover;
+    padding: 125px 0;
+    &__inner{
+        display: flex;
+    }
+    &__popup{
+        margin-right: 60px;
+        max-width: 530px;
+        width: 100%;
+        height: 480px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+    &__content{
+        max-width: 570px;
+    }
+    &__subtitle{
+        padding-top: 75px;
+        font-size: 22px;
+        color: $accent;
+        text-transform: uppercase;
+        margin-bottom: 5px;
+    }
+    &__title{
+        text-align: left;
+    }
+    &__text{
+        margin-bottom: 55px;
+    }
+    &__link{
+        @extend %btn;
     }
 }
 
