added register page

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -537,8 +537,6 @@ footer{
             color: $title;
         }
     }
-    &__text{
-    }
     &__link{
         text-transform: uppercase;
         color: $title;
@@ -696,6 +694,9 @@ footer{
         margin-top: 12px;
         color: $accent;
         display: inline-block;
+    }
+    &__text{
+        margin-bottom: 25px;
     }
 }
 
