--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -27,8 +27,10 @@ $bg: #f6f6f6;
     letter-spacing: 3px;
     background-color: $accent;
     box-shadow: 0px 7px 10px rgba(255,17,48,0.3);
+    cursor: pointer;
 }
-%checkbox-hidden{
+%checkbox-hidden,
+%radio-hidden{
     width: 1px;
     height: 1px;
     overflow: hidden;
