--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -682,30 +682,7 @@ footer{
     &__item-box{
         padding: 30px 40px;
     }
-    &__item-info{
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 20px;
-    }
-    &__item-author, 
-    &__item-date{
-        padding-left: 30px;
-        position: relative;
-        &::before{
-            content: '';
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            left: 0;
-            top: 4px;
-        }
-    }
-    &__item-author::before{
-        background-image: url('../images/icons/user-grey.svg');
-    }
-    &__item-date::before{
-        background-image: url('../images/icons/date.svg');
-    }
+
     &__item-title{
         color: $title;
         @extend %roboto-400;
@@ -727,6 +704,31 @@ footer{
     }
 }
 
+
+.blog-box{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    &__author,
+    &__date{
+        padding-left: 30px;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            left: 0;
+            top: 4px;
+        }
+    }
+    &__author::before{
+        background-image: url('../images/icons/user-grey.svg');
+    }
+    &__date::before{
+        background-image: url('../images/icons/date.svg');
+    }
+}
 
 .modal{
     padding-top: 100px;
@@ -1484,10 +1486,193 @@ footer{
         grid-template-columns: repeat(4, 1fr);
         gap: 30px;
         .product-item__img-box{
+            display: block;
             height: auto;
         }
         .product-item__title{
             padding: 5px 0;
+        }
+    }
+}
+.blog-page{
+    padding: 120px 0 60px;
+    &__item--slider{
+        .blog-page__item-box{
+            margin-top: -8px;
+        }
+    }
+    &__slider{
+        .slick-next,
+        .slick-prev{
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            z-index: 5;
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: $accent;
+            border: none;
+            box-shadow: 0px 7px 10px rgba(254,62,87,0.3);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            path{
+                fill: #fff;
+            }
+        }
+        .slick-disabled{
+            background-color: #fff;
+            box-shadow: 0px 7px 10px rgba(168,168,168,0.3);
+            path{
+                fill: $accent;
+            }
+        }
+        .slick-next{
+            right: 40px;
+        }
+        .slick-prev{
+            left: 40px;
+        }
+    }
+    &__inner{
+        display: flex;
+        justify-content: space-between;
+    }
+    &__content{
+        width: 770px;
+        margin-right: 30px;
+    }
+    &__aside{
+        width: 370px;
+    }
+    &__item{
+        margin-bottom: 60px;
+        &.blog-page__item--noimage{
+            border-top: 1px solid #ececec;
+            box-shadow: 0px 20px 30px rgba(202,202,202,0.35);
+        }
+    }
+    &__item-link{
+        display: block;
+        color: inherit;
+        font-family: inherit;
+        font-size: inherit;
+    }
+    &__img{
+        max-width: 770px;
+        height: 450px;
+        object-fit: cover;
+        display: block;
+    }
+    &__item-box{
+        border: 1px solid #ececec;
+        border-top: none;
+        padding: 40px;
+    }
+    &__item-title{
+        color: $title;
+        font-size: 22px;
+        line-height: 32px;
+        @extend %roboto-700;
+        margin-bottom: 20px;
+        transition: all 0.3s ease 0s;
+        &:hover{
+            color: $accent;
+        }
+    }
+    .blog-box{
+        justify-content: start;
+        &__author{
+            margin-right: 30px;
+        }
+    }
+
+}
+.person{
+    border: 1px solid #ececec;
+    margin-bottom: 40px;
+    text-align: center;
+    padding: 40px 25px 30px;
+    &__img{
+        display: inline-block;
+        width: 160px;
+        height: 160px;
+        object-fit: cover;
+        margin: 0 auto 35px;
+    }
+    &__name{
+        color: $title;
+        font-size: 18px;
+        @extend %roboto-700;
+    }
+    &__position{
+        color: $accent;
+        margin-bottom: 25px;
+    }
+    &__text{
+        margin-bottom: 25px;
+    }
+    &__social-link{
+        margin: 0 8px;
+        path{
+            fill: $default;
+            transition: all 0.3s ease 0s;
+        }
+        &:hover{
+            path{
+                fill: $accent;
+            }
+        }
+    }
+}
+.latest-post{
+    border: 1px solid #ececec;
+    margin-bottom: 40px;
+    padding: 35px 30px 20px;
+    &__title{
+        text-transform: uppercase;
+        color: $title;
+        font-size: 22px;
+        @extend %roboto-400;
+        margin-bottom: 35px;
+    }
+    &__item{
+        margin-bottom: 20px;
+        display: flex;
+        & + .latest-post__item{
+            border-top: 1px solid #ececec;
+            padding-top: 20px;
+        }
+    }
+    &__img-link{
+        display: block;
+        margin-right: 20px;
+        min-width: 80px;
+    }
+    &__img{
+        width: 80px;
+        height: 80px;
+        object-fit: cover;
+    }
+    &__title-link{
+        font-size: 18px;
+        @extend %roboto-400;
+        color: $title;
+        line-height: 29px;
+    }
+    &__date{
+        padding-left: 26px;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 5px;
+            background-image: url('../images/icons/calendar.svg');
+            width: 16px;
+            height: 16px;
         }
     }
 }
