--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1501,6 +1501,20 @@ footer{
             margin-top: -8px;
         }
     }
+    &__video-popup {
+        max-width: 770px;
+        height: 450px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+    &__video-play{
+        box-shadow: 0px 7px 10px rgba(168,168,168,0.3);
+    }
     &__slider{
         .slick-next,
         .slick-prev{
