--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1690,6 +1690,140 @@ footer{
         }
     }
 }
+.blog-one{
+    &__text{
+        border: 1px solid #ececec;
+        border-top: none;
+        padding: 30px;
+        h4{
+            @extend %roboto-700;
+            color: $title;
+            font-size: 22px;
+            margin: 25px 0;
+        }
+        p{
+            margin: 25px 0;
+        }
+        blockquote{
+            background-color: $bg;
+            border-left: 3px solid $accent;
+            color: $title;
+            @extend %roboto-400;
+            font-size: 22px;
+            margin: 25px 0;
+            padding: 35px;
+        }
+    }
+    &__left-img{
+        float: left;
+        margin-right: 30px;
+        margin-bottom: 10px;
+    }
+    &__right-img{
+        float: right;
+        margin-left: 30px;
+        margin-bottom: 10px;
+    }
+    .comments-title{
+        text-transform: uppercase;
+        color: $title;
+        font-size: 24px;
+        margin-bottom: 25px;
+        @extend %roboto-700;
+    }
+    .comments-form{
+        border-bottom: none;
+    }
+    &__box{
+        margin: 25px 0 35px;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__tags,
+    &__share{
+        span{
+            text-transform: uppercase;
+            color: $title;
+            margin-right: 7px;
+            @extend %roboto-700;
+        }
+    }
+    &__tags{
+        a:hover{
+            text-decoration: underline;
+        }
+    }
+    &__share{
+        a{
+            margin-right: 12px;
+            vertical-align: middle;
+            path{
+                fill: $default;
+            }
+            &:hover{
+                path{
+                    fill: $accent;
+                }
+            }
+        }
+    }
+    &__author{
+        border-bottom: 1px solid #ececec;
+        padding-bottom: 40px;
+        margin-bottom: 40px;
+        display: flex;
+    }
+    &__author-img{
+        width: 140px;
+        height: 140px;
+        margin-right: 30px;
+        object-fit: cover;
+    }
+    &__author-name{
+        display: block;
+        text-transform: uppercase;
+        @extend %roboto-700;
+        color: $title;
+        margin-bottom: 24px;
+        font-size: 22px;
+    }
+    &__form-title{
+        text-transform: uppercase;
+        margin: 35px 0 25px;
+        color: $title;
+        @extend %roboto-700;
+        font-size: 24px;
+    }
+    &__info{
+        display: flex;
+        margin-bottom: 25px;
+    }
+    &__info-link{
+        padding-left: 28px;
+        margin-right: 30px;
+        position: relative;
+        &::before{
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 2px;
+            width: 16px;
+            height: 16px;
+        }
+    }
+    &__info-link--date::before{
+            background-image: url(../images/icons/calendar.svg);
+    }
+    &__info-link--comment::before{
+            background-image: url(../images/icons/comment.svg);
+    }
+    &__info-link--author::before{
+            background-image: url(../images/icons/user-red.svg);
+    }
+}
+
+
+
 
 
 
