--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -115,6 +115,9 @@ footer{
         font-size: 22px;
         line-height: 1;
     }
+    &__form{
+        display: flex;
+    }
     &__link{
         display: block;
         margin-bottom: 14px;
@@ -127,6 +130,7 @@ footer{
         max-width: 320px;
         width: 100%;
         border: none;
+        margin-right: 3px;
         padding: 12px 10px 12px 15px;
         box-shadow: 0px 7px 10px rgba(192,192,192,0.3);
         &::placeholder{
