--- a/app/module/_login/_login.scss
+++ b/app/module/_login/_login.scss
@@ -49,3 +49,12 @@
         margin-bottom: 25px;
     }
 }
+
+
+@media (max-width: 375px){
+    .modal{
+        &__link{
+            margin: 0 20px;
+        }
+    }
+}
