--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -40,6 +40,7 @@ a{
 }
 .breadcrumbs{
     display: inline-flex;
+    flex-wrap: wrap;
     justify-content: center;
     padding-left: 25px;
     position: relative;
